# IFFParser

./: README.md  iffparser.py  mypy.ini  setup.cfg
iffparser/: __init__.py  __init__.pyi  iffparser.py  iffparser.pyi  main.py  main.pyi  structs.py  structs.pyi
