[metadata]
name = iffparser
version = attr: iffparser.__init__.__version__
description = IFF graphics parser written in Python
long_description = file: README.md
long_description_content_type = text/markdown
# license =
author = Ian Ford
author_email = ianhoffmanuk@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    iffp = iffparser.main:main

[yapf]
based_on_style = yapf
